tests/rosetta/out/Haskell/averages-simple-moving-average.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/averages-simple-moving-average.hs:152:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/averages-simple-moving-average.hs:147:1
                 /workspace/mochi/tests/rosetta/out/Haskell/averages-simple-moving-average.hs:152:1
    |
152 | main = do
    | ^^^^
